user/themes/solstice/src/scss/_style.scss
/* ... */
.dropotron > li:first-child {
    border-top: 0;
}

.dropotron > li > a {
    color: inherit;
    letter-spacing: 1px;
    text-decoration: none;
    text-transform: none;
}

.dropotron > li.active > a, .dropotron > li:hover > a {
    color: inherit;
}

.dropotron.level-0,
.dropotron.level-1 {
    border-radius: 0 0 4px 4px;
    font-size: 1em;
}

/* Banner */

#banner {
    background-color: config.$color-disabled;
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
    color: config.$color-nav-text;
    height: 24em;
    overflow: hidden;
}

#banner .container h2 {
    background-color: config.$color-primary;
    display: inline-block;
    font-size: 2.4em;
    font-weight: 400;
    line-height: 0.5em;
    margin: 0;
    padding: 0.5em 0.3em;
    text-transform: uppercase;
}

#banner .container .follower, #banner .container .blurb {
    font-size: 1.2em;
    font-weight: 300;
    letter-spacing: 1px;
    margin: 1em 0;
    padding: 0.25em 1.3em;
}

#banner .container .follower {
    display: inline-block;
}

#banner .container .blurb {
    display: inline-block;
}

/* Main */

#main {
    padding: 4em 0;
}

#main #content .major, #main #sidebar .major {
    text-align: left;
}

#main #sidebar section {
    margin-top: 3em;
}

#main #sidebar section:first-child {
    margin-top: 0;
}

#main #sidebar .major {
    padding-top: 0.35em;
}

#main #sidebar .major h2 {
    font-size: 1.8em;
}

/* Extra */

#extra h2 {
    display: block;
    font-size: 1.8em;
    font-weight: 400;
    letter-spacing: 1px;
    text-transform: uppercase;
}

#extra h3 {
    display: block;
    font-size: 1.6em;
    font-weight: 400;
    letter-spacing: 1px;
    text-transform: uppercase;
}

/* Footer */

#footer {
    background-color: config.$color-bg-secondary;
    color: config.$color-secondary;
    padding: 6em 0 2em;
    text-align: center;
}

#footer hr {
    border-bottom: 1px solid;
    border-color: inherit;
    opacity: 0.05;
}

#footer .major h2 {
    color: inherit;
}

#footer .major .byline,
#copyright {
    color: inherit;
    opacity: 0.6;
}

#footer .copyright {
    margin-top: 3em;
    text-align: center;
}

/* Copyright */

#copyright {
    padding: 2em 0;
    position: relative;
    text-align: center;
    text-transform: none;
}

#copyright a {
    color: inherit;
    text-decoration: none;
}

/* Team */

#team h3 {
    font-weight: 700;
    letter-spacing: 2px;
    margin-bottom: 0.50em;
    text-transform: uppercase;
}

